force-app/main/default/objects/Teacher_Working_Hour__c/Teacher_Working_Hour__c.object-meta.xml
<CustomObject>
    <label>Teacher Working Hour</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Teacher Working Hour ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Teacher Working Hours</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>