force-app/main/default/objects/Teacher_Working_Hour__c/fields/Break_Time__c.field-meta.xml
<CustomField>
    <fullName>Break_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select the checkbox to create a break schedule</inlineHelpText>
    <label>Break Time</label>
    <type>Checkbox</type>
</CustomField>