force-app/main/default/objects/Teacher_Working_Hour__c/fields/Centre__c.field-meta.xml
<CustomField>
    <fullName>Centre__c</fullName>
    <formula>Center_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Centre</label>
    <type>Text</type>
</CustomField>