force-app/main/default/objects/Teacher_Working_Hour__c/fields/Is_Booking_Booking_created__c.field-meta.xml
<CustomField>
    <fullName>Is_Booking_Booking_created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used when we create break hours booking from the Anonymous window (dev console)</description>
    <label>Is Booking Booking created</label>
    <type>Checkbox</type>
</CustomField>