force-app/main/default/objects/Teacher_Working_Hour__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>store Resource</description>
    <label>Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Teacher Working Hours</relationshipLabel>
    <relationshipName>Teacher_Working_Hours</relationshipName>
    <type>Lookup</type>
</CustomField>