force-app/main/default/objects/Teacher_Working_Hour__c/fields/Teacher_Name__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Teacher Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Teacher</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Teacher Working Hours</relationshipLabel>
    <relationshipName>Teacher_Working_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>